# fusion

./: CMakeLists.txt  README.md
cmake/: FusionOptions.cmake  FusionWarnings.cmake
examples/: CMakeLists.txt
examples/triangle/: main.cpp  triangle.frag
include/fusion/: fusion.hpp
include/fusion/core/: Device.hpp  Instance.hpp  Surface.hpp  Swapchain.hpp
include/fusion/frame/: FrameContext.hpp  FrameSystem.hpp  InFlightManager.hpp
include/fusion/graph/: DependencyResolver.hpp  PassBuilder.hpp  PassContext.hpp  RenderGraph.hpp  ResourceHandle.hpp
include/fusion/memory/: Allocater.hpp  MemoryPool.hpp
include/fusion/pipeline/: ComputePipeline.hpp  GraphicsPipeline.hpp  PipelineBuilder.hpp
include/fusion/resource/: Buffer.hpp  ResourceDescription.hpp  Sampler.hpp  Texture.hpp
include/fusion/sync/: BarrierBuilder.hpp  Timeline.hpp
include/fusion/util/: Debug.hpp  Logger.hpp
src/: CMakeLists.txt
src/core/: Device.cpp  Surface.cpp
src/frame/: FrameContext.cpp  FrameSystem.cpp  InFlightManager.cpp
src/graph/: DependencyResolver.cpp  PassBuilder.cpp  PassContext.cpp  RenderGraph.cpp
src/memory/: Allocater.cpp  MemoryPool.cpp
src/pipeline/: ComputePipeline.cpp  GraphicsPipeline.cpp  PipelineBuilder.cpp
src/resource/: Buffer.cpp  Texture.cpp
src/sync/: BarrierBuilder.cpp  Timeline.cpp
